--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,13 +9,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".activities.LoginActivity">
 
-    <Button
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/btnFacebookLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login with Facebook"
-        android:id="@+id/btnLogin"
-        android:layout_marginTop="186dp"
-        android:layout_alignParentTop="true"
-        android:onClick="login"
+        android:layout_gravity="center_horizontal"
+        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
