--- a/app/src/main/res/layout/activity_create_trip.xml
+++ b/app/src/main/res/layout/activity_create_trip.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="team8.codepath.sightseeingapp.CreateTripActivity">
+    tools:context=".activities.CreateTripActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
