--- a/app/src/main/res/layout/content_create_trip.xml
+++ b/app/src/main/res/layout/content_create_trip.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="team8.codepath.sightseeingapp.CreateTripActivity"
+    tools:context=".activities.CreateTripActivity"
     tools:showIn="@layout/activity_create_trip">
 
 </RelativeLayout>
