--- a/app/src/main/res/layout/content_create_trip.xml
+++ b/app/src/main/res/layout/content_create_trip.xml
@@ -18,7 +18,8 @@
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:weightSum="1">
 
         <LinearLayout
             android:orientation="vertical"
@@ -36,14 +37,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/etTripName"
-                android:hint="Best of Manhattan Ice Cream" />
+                android:hint="Name your trip" />
         </LinearLayout>
 
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="66dp"
             android:layout_gravity="center_horizontal">
 
             <TextView
@@ -101,7 +102,7 @@
 
         <ListView
             android:layout_width="match_parent"
-            android:layout_height="107dp"
+            android:layout_height="373dp"
             android:id="@+id/lvPlaces" />
 
 
