Create Trip progress :fallen_leaf:
What it does right now: creates Trip entity, and creates Place entity
with the ID of the trip. but it is unable to make array of Places based
on the Trip :(

--- a/app/src/main/res/layout/content_create_trip.xml
+++ b/app/src/main/res/layout/content_create_trip.xml
@@ -105,11 +105,36 @@
 
             <ListView
                 android:layout_width="match_parent"
-                android:layout_height="373dp"
+                android:layout_height="303dp"
                 android:id="@+id/lvPlaces" />
+
+
+
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Trip Length"
+                    android:id="@+id/tvTripLength" />
+
+
+                <NumberPicker
+                    android:id="@+id/npTripLength"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    />
+
+            </LinearLayout>
 
 
         </LinearLayout>
 
-    </RelativeLayout>
+
+</RelativeLayout>
 
