some more UI improvements for create trip :dart:

--- a/app/src/main/res/layout/content_create_trip.xml
+++ b/app/src/main/res/layout/content_create_trip.xml
@@ -21,14 +21,18 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:weightSum="1">
+            android:weightSum="1"
+            android:baselineAligned="false">
 
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
+                android:layout_marginBottom="10dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal">
+                android:layout_gravity="center_horizontal"
+                android:background="#fff"
+                android:padding="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -47,8 +51,11 @@
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="66dp"
-                android:layout_gravity="center_horizontal">
+                android:layout_height="80dp"
+                android:layout_gravity="center_horizontal"
+                android:background="#fff"
+                android:baselineAligned="true"
+                android:padding="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -105,17 +112,22 @@
 
             <ListView
                 android:layout_width="match_parent"
-                android:layout_height="303dp"
-                android:id="@+id/lvPlaces" />
+                android:layout_height="200dp"
+                android:id="@+id/lvPlaces"
+                android:fastScrollAlwaysVisible="false" />
 
 
 
 
             <LinearLayout
+                android:layout_marginTop="10dp"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal">
+                android:layout_height="100dp"
+                android:layout_gravity="center_horizontal"
+                android:background="#fff"
+                android:baselineAligned="true"
+                android:padding="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
